tests/ui/read_macros/find_unique_non_unique_where.stderr
error: Failed to parse schema: Schema file 'prax/schema.prax' not found. Searched in:
         - CARGO_MANIFEST_DIR/prax/schema.prax
         - (absolute) prax/schema.prax
         - (current_dir) prax/schema.prax
 --> tests/ui/read_macros/find_unique_non_unique_where.rs:4:1
  |
4 | prax_orm::prax_schema!("prax/schema.prax");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `prax_orm::prax_schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cursor field `name` is not a unique column. Use a field marked `@id` or `@unique`.
 --> tests/ui/read_macros/find_unique_non_unique_where.rs:8:18
  |
8 |         where: { name: "Alice" },
  |                  ^^^^
